--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -18,22 +18,63 @@
     margin-left: 50px;
 }
 
-.homecontainer h1 {
 
-    justify-content: center;
-    align-items: center;
-    font-size: 80px;
+
+.loader{
+
+    position: relative;
+
+}
+
+.loader h2{
+
+    font-size: 50px;
     font-weight: 500;
     color: rgb(158, 148, 148);
-    height: 60px;
+    height: 50px;
+    letter-spacing: 2px;
+    position: relative;
+}
+
+.loader::before{
+
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: rgb(158, 148, 148);
+    
+}
+
+.loader h2{
+
+    position: relative;
+    letter-spacing: 2px;
+    animation: typing 8s steps(40) infinite;
+    overflow: hidden;
+}
+
+@keyframes typing {
+
+    0%,90%,100%
+    {
+        width: 0;
+    }
+    30%
+    {
+        width: 950px;
+    }
 }
 
 .homecontainer p {
 
     padding: 0;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: lighter;
     color: rgb(144, 137, 137);
+    letter-spacing: 2px;
 }
 
 .homecontainer button{
