--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -22,6 +22,8 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-right: 10px;
+    text-decoration: none;
 
 }
 
